# daily-menu-voting

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
authentication/: admin.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
config/: settings.py  urls.py  versioning.py
restaurants/: models.py  permissions.py  serializers.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py
restaurants/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
voting/: models.py  serializers.py  urls.py  validators.py  views.py
voting/api/v1/: serializers.py
voting/api/v2/: serializers.py
voting/migrations/: 0001_initial.py
voting/tests/: factories.py  test_models.py  test_serializers_v1.py  test_serializers_v2.py  test_views.py
